# ros2_ws

./: .gitignore
.cursor/rules/: picar-sim.mdc
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ackermann_robot_pkg/lib/ackermann_robot_pkg/: auto_mode_toggle  control_ackermann  test_direct_drive  test_gazebo_sim  test_wheel_control
install/ackermann_robot_pkg/share/ackermann_robot_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ackermann_robot_pkg/share/ackermann_robot_pkg/config/: ackermann_controller.yaml
install/ackermann_robot_pkg/share/ackermann_robot_pkg/launch/: ackermann_gazebo.launch.py  test_joints.launch.py
install/ackermann_robot_pkg/share/ackermann_robot_pkg/models/ackermann_robot/: model.config  model.sdf
install/ackermann_robot_pkg/share/ackermann_robot_pkg/worlds/: ackermann_world.sdf
log/: latest_build
src/ackermann_robot_pkg/: CMakeLists.txt  setup.cfg  setup.py
src/ackermann_robot_pkg/ackermann_robot_pkg/: auto_mode_toggle.py  control_ackermann.py
src/ackermann_robot_pkg/launch/: ackermann_gazebo.launch.py
src/ackermann_robot_pkg/models/ackermann_robot/: model.sdf
src/ackermann_robot_pkg/urdf/: ackermann_robot.urdf.xacro
src/ackermann_robot_pkg/worlds/: ackermann_world.sdf
