<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ackermann_robot_pkg</name>
  <version>0.0.0</version>
  <description>Package for the ackermann robot</description>
  <maintainer email="marc.wester@gmail.com">mw</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ackermann_msgs</depend>
  <depend>ackermann_steering_controller</depend>
  <depend>ros_gz_bridge</depend>
  <depend>gz_ros2_control</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
